welcome.lessons.welcome.array.array123.Array123.scala.error
array123:2: error: value lenght is not a member of Array[Int]
  for(i<- 0 to nums.lenght-3)
                    ^array123:4: error: not found: value c
    if(c(i)==1 && c(i+1)==2 && c(i+2)==3)
       ^array123:4: error: not found: value c
    if(c(i)==1 && c(i+1)==2 && c(i+2)==3)
                  ^array123:4: error: not found: value c
    if(c(i)==1 && c(i+1)==2 && c(i+2)==3)
                               ^