welcome.lessons.welcome.array.array123.Array123.scala.code
def array123(nums:Array[Int]): Boolean = {
  for(i<- 0 to nums.lenght-3)
  {
    if(c(i)==1 && c(i+1)==2 && c(i+2)==3)
    	 return true
  }
}